--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.32.0",
     "swiftlint": "^1.0.1",
-    "typescript": "~4.0.3"
+    "typescript": "^5.5.2"
   },
   "peerDependencies": {
     "@capacitor/core": "next"
@@ -69,5 +69,8 @@
     "android": {
       "src": "android"
     }
+  },
+  "dependencies": {
+    "@periksa/cap-usb-camera": "^0.1.3"
   }
 }
